# TradeZest

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TradeZest.sln  config.sample.txt
Source/: Broker.cpp  Broker.hpp  ConfigManager.cpp  ConfigManager.hpp  HTTPRequest.cpp  HTTPRequest.hpp  Main.cpp  OandaApi.hpp  Secrets.sample.hpp
Tests/: BrokerTest.cpp  HTTPRequestTest.cpp  Main.cpp  OandaApiTest.cpp
Tests/Mocks/: MockHttpRequest.hpp
TradeZest/: TradeZest.vcxproj  TradeZest.vcxproj.filters
TradeZest/Source/: Broker.cpp  Broker.hpp  HTTPRequest.cpp  HTTPRequest.hpp  Main.cpp
TradeZest/Source/Broker/: BrokerInterface.hpp  RobbinHood.cpp  RobbinHood.hpp
TradeZest/Tests/: BrokerTest.cpp  HTTPRequestTest.cpp  MainTest.cpp
tradezest-test/: test.cpp  tradezest-test.vcxproj
tradezest-test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog
tradezest-test/x64/Debug/TradeZest_Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.write.1u.tlog  TradeZest_Test.lastbuildstate
tradezest-test/x64/Release/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  Test.lastbuildstate
